Remove git-filter-repo from git tracking

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -47,9 +47,11 @@
   }
   
   p {
-    font-size: 20px;
+    font-size: 1.4rem;
   }
-
+  li{
+    font-size: 1.4rem;
+  }
   h4 {
     font-size: 1.5rem;
    
@@ -81,9 +83,11 @@
     }
 
   p {
-    font-size: 16px; /* Réduit encore plus la taille des paragraphes */
+    font-size: 17px; /* Réduit encore plus la taille des paragraphes */
   }
-
+  li{
+    font-size: 17px;
+  }
   h4 {
     font-size: 1.1rem; /* Réduit encore la taille des titres */
   }
